# binary-indexed-tree

./: README.md  binary-indexed-tree.cabal
Data/: BinaryIndexedTree.hs
Data/BinaryIndexedTree/: ST.hs
